# cloud9-hackathon-backend

./: .env  ALGORITHMS.md  README.md  main.py  main_legacy.py  pyproject.toml  query_data.py
core/domain/: Character.py  CharacterPick.py  Player.py  Report.py  Team.py
data_fetching/: dump_grid_lol.sh  dump_working_v1.sh  series.jsonl  series_state.jsonl  tournaments.jsonl
notebooks/: grid_lol_exploration.ipynb  kaggle_lol_analysis.ipynb
scouting/: __init__.py  cli.py  config.py  features.py  grid_client.py  grid_ingest.py  grid_queries.py  insights_enhanced.py  matchups.py  normalize.py  randomness.py  render.py  report.py  report_pdf.py  role_map.json  scenarios.py
src/: __init__.py  main.py
src/api/: __init__.py
src/api/rest/: routes.py
src/api/transformers/: __init__.py  report_transformer.py
src/api/websocket/: __init__.py  handlers.py
src/application/ports/: __init__.py  report_builder.py  scouting_service.py
src/application/use_cases/: __init__.py  generate_report.py
src/domain/entities/: __init__.py  draft.py  player.py  report.py  scenario.py
src/domain/value_objects/: __init__.py  types.py
src/infrastructure/adapters/: __init__.py  grid_scouting_adapter.py
tests/: test_matchups.py  test_normalize.py  test_randomness.py
tests/fixtures/: central_allseries_page1.json  central_titles.json  central_tournaments.json  series_state_sample.json
