[project]
name = "backend"
version = "0.1.0"
description = "LoL Scouting Report API - Generate professional scouting reports for League of Legends teams"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "scikit-learn>=1.4.0",
]
